--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -27,4 +27,7 @@ dependencies {
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+
+    // Debug (LeakCanary)
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$canary_version"
 }
